# nih-plug

./: .gitignore  Cargo.toml
plugins/examples/alien/: Cargo.toml
plugins/examples/alien/infra/: MovePlugAndListenToLog.ps1
plugins/examples/alien/src/: editor.rs  lib.rs  sensors_data_receiver.rs  sensors_data_reciever.rs
