[package]
name = "alien"
version = "0.1.0"
edition = "2021"
authors = ["Robbert van der Helm <mail@robbertvanderhelm.nl>"]
license = "ISC"

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { path = "../../../", features = ["assert_process_allocs"] }
nih_plug_iced = { path = "../../../nih_plug_iced" }
atomic_float = "0.1"
rust_socketio = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
